# Raft-consensus-in-rust

./: .gitignore  Cargo.toml  Readme.md  api.test.py
assets/: playerConfig.json
src/: Helpers.rs  Senders.rs  lib.rs  main.rs  premain.rs
