[package]
name = "pantherchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "my_lib"

[[bin]]
name = "my_executable"
path = "src/main.rs"

[workspace]
members = ["src/Helpers.rs"]
