[package]
name = "pantherchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
sha256 = "1.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
reqwest = "0.11"



[lib]
name = "my_lib"

[[bin]]
name = "my_executable"
path = "src/main.rs"

[workspace]
members = ["src/Helpers.rs" , "src/Senders.rs"]
